[tool.poetry]
name = "photo-restoration"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlalchemy = "^2.0.8"
python-dotenv = "^1.0.0"
fastapi-jwt-auth = "^0.5.0"
alembic = "^1.10.2"
asyncpg = "^0.27.0"
black = "^23.3.0"
pytest = "^7.3.0"
pytest-postgresql = "^4.1.1"
httpx = "^0.23.3"
pytest-asyncio = "^0.21.0"
pytest-schema = "^0.1.1"
psycopg = "^3.1.8"
pre-commit = "^3.2.2"
redis = "^4.5.4"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
